# adaptivenet

./: .env.example  .gitignore  BUILD_GUIDE.md  Cargo.toml  Dockerfile  README.md  client-magic.ts  config.json  openapi.yaml  package-lock.json  package.json  requirements.txt  tsconfig.json  vercel.json  wrangler.toml
.wrangler/tmp/deploy-U1Gu3p/: index.js  index.js.map
api/: index.py  index.ts
client/: index.ts
client/core/: browser.ts  logger.ts  proxy-node.ts  types.ts
client/providers/: lk21.ts  musixmatch.ts  ytmusic.ts
docs/en/: README.md
docs/id/: README.md
docs/zh/: README.md
legacy/python/: vercel.json
legacy/rust/: Cargo.toml  Dockerfile
legacy/rust/src/: main.rs  services.rs
scripts/: debug-proxy.ts  get-cookie.ts  verify.ts
src/: app.ts  index.ts  main.rs  models.rs  router.ts  routes.rs  server.ts  services.rs
src/adapters/: registry.ts
src/adapters/lk21/: endpoint_documentation.md.resolved  index.ts
src/adapters/musixmatch/: index.ts
src/adapters/ytmusic/: index.ts
src/cli/: ClientEngine.ts  ConfigManager.ts  DeployManager.ts  main.ts
src/core/: engine.ts  types.ts
src/infra/: CloudflareStorageFactory.ts  ServerStorageFactory.ts  StorageFactory.ts
src/infra/drivers/: CloudflareKVDriver.ts  FileSystemDriver.ts  UpstashRedisDriver.ts
src/models/: types.ts
src/services/: lk21.ts
src/types/: storage.ts
src/utils/: http.ts
tests/: api.test.ts
v1/api/: lk21_app.py  lk21_handler.py
