[package]
name = "lk21-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
anyhow = "1.0"
# For Vercel Serverless
vercel_runtime = { version = "1.1.2" }

[[bin]]
name = "api"
path = "src/main.rs"
